fixed responsiveness on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
 
 
 body {
+    boddy:100%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1em;
 }
@@ -31,7 +32,7 @@ body {
     box-shadow: 0px 3px 20px rgba(0, 0, 0, .27);
     padding: 20px 30px;
     width: 480px;
-    height: 50%;
+   
     background-color: #59B0F5;
     display: flex;
     flex-direction: column;
@@ -42,6 +43,7 @@ body {
 
 .weather-location {
     text-align: center;
+    margin-bottom:1em;
 
 }
 
@@ -90,5 +92,35 @@ body {
 .weather-sun-set-icon {
 
     padding-top: 12px;
+
+}
+
+
+@media only screen and (max-width:640px){
+    
+    
+    
+    .weather {
+        width:95%;
+        padding:1em 1em;
+        min-width:450;
+        
+    }
+
+    .weather-info-icon svg {
+       width:75%;
+       
+    }
+
+
+
+}
+
+@media only screen and (max-width:425px){
+
+    .weatherinfo-icon {
+        text-align:center;
+    }
+
 
 }
